# Aposys-Radar-System

./: .gitmodules  CMakeLists.txt  README.md  __init__.py  main.py  run.sh  test.py  test1  usbcan(english).py  usbcan.py
MR76_Radar/src/: mr76_radar.cpp  mr76_radar.h
Radar_Files/src/: mr76_radar.cpp  mr76_radar.h
can_files/: usbcan.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Aposys-Radar-System/share/Aposys-Radar-System/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
radar_files/src/: mr76_radar.cpp  mr76_radar.h
src/: main.py  plot.py  test.py  test1.cpp  usbcan.py
src/app/: bindings.cpp
src/ros_files/: package.xml  setup.cfg  setup.py
src/ros_files/ros_files/: rviz_node.py
